# Modern-Cpp-Programming-Cookbook-Third-Edition

./: .gitignore  CMakeLists.txt  README.md
Chapter01/: main.cpp  recipe_1_01.h  recipe_1_02.h  recipe_1_04.h  recipe_1_06.h  recipe_1_07.h  recipe_1_08.h  recipe_1_10.h  recipe_1_11_1.cpp  recipe_1_11_2.cpp  recipe_1_13.h  recipe_1_14.h  recipe_1_15.h
Chapter02/: main.cpp  recipe_2_01.h  recipe_2_03.h  recipe_2_04.h  recipe_2_05.h  recipe_2_06.h  recipe_2_07.h  recipe_2_08.h  recipe_2_09.h  recipe_2_10.h  recipe_2_11.h  recipe_2_12.h  recipe_2_13.h  recipe_2_14.h  recipe_2_15.h  recipe_2_16.h  recipe_2_17.h
Chapter03/: funclib.h  main.cpp  recipe_3_01.h  recipe_3_02.h  recipe_3_04.h  recipe_3_05.h  recipe_3_06.h  recipe_3_07.h  recipe_3_08.h  recipe_3_09.h  recipe_3_10.h
Chapter04/: recipe_4_04.h
Chapter05/: main.cpp  recipe_5_01.h  recipe_5_02.h  recipe_5_04.h  recipe_5_05.h  recipe_5_07.h  recipe_5_10.h  recipe_5_12.h
Chapter06/: main.cpp  recipe_6_02.h  recipe_6_03.h  recipe_6_04.h  recipe_6_06.h  recipe_6_07.h  recipe_6_08.h  recipe_6_09.h  recipe_6_10.h  recipe_6_11.h  recipe_6_12.h  recipe_6_13.h  recipe_6_14.h  recipe_6_15.h  recipe_6_16.h  recipe_6_17.h  recipe_6_18.h  recipe_6_19.h
Chapter07/: main.cpp  recipe_7_01.h  recipe_7_03.h  recipe_7_04.h  recipe_7_05.h  recipe_7_06.h  recipe_7_07.h  recipe_7_08.h  recipe_7_09.h  recipe_7_10.h  recipe_7_11.h  recipe_7_12.h  recipe_7_13.h
Chapter08/: main.cpp  recipe_8_02.h  recipe_8_03.h  recipe_8_04.h  recipe_8_05.h  recipe_8_07.h  recipe_8_08.h  (+6 more)
Chapter12/chapter12_12_2/: CMakeLists.txt  main.cpp
(+89 files in other folders)
